Modifications "MyFrame" : -Ajout diposition GirBagLayout -Generation images pour bouttons

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=miagejaval3_djerir_edoo_henryc.MIAGEJAVAL3_DJERIR_EDOO_HENRYC
+main.class=TestJTable.T_Jtable
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
